--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
         "watch": "encore dev --watch",
         "build": "encore production --progress"
     },
+    "engines": {
+        "node": "v14.17.1",
+        "npm": "6.14.13"
+    },
     "dependencies": {
         "flowbite": "^1.6.5"
     }
