--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "flowbite": "^1.6.5"
+        "flowbite": "^1.6.5",
+        "heroku-client": "^3.1.0"
     }
 }
