--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@types/node": "^18.16.3",
         "flowbite": "^1.6.5",
         "heroku-client": "^3.1.0",
-        "postcss": "^8.1.0"
+        "postcss": "^8.1.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.0.4"
     }
 }
