--- a/package.json
+++ b/package.json
@@ -30,6 +30,14 @@
         "heroku-client": "^3.1.0",
         "postcss": "^8.1.0",
         "ts-node": "^10.9.1",
-        "typescript": "^5.0.4"
+        "typescript": "^5.0.4",
+        "postcss-loader": "^7.2.4",
+        "regenerator-runtime": "^0.13.9",
+        "sass": "^1.62.0",
+        "sass-loader": "^13.0.0",
+        "tailwindcss": "^3.3.1",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-notifier": "^1.15.0"
     }
 }
