--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
         "postcss": "^8.1.0",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.4"
+    },
+    "engines": {
+        "node": "14.17.x",
+        "npm": "6.14.x"
     }
 }
