--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "symfony/twig-bundle": "6.2.*",
         "symfony/validator": "6.2.*",
         "symfony/web-link": "6.2.*",
+        "symfony/web-profiler-bundle": "6.2.*",
         "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.2.*",
         "symfonycasts/reset-password-bundle": "^1.17",
@@ -103,7 +104,6 @@
         "symfony/css-selector": "6.2.*",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^6.2",
-        "symfony/stopwatch": "6.2.*",
-        "symfony/web-profiler-bundle": "6.2.*"
+        "symfony/stopwatch": "6.2.*"
     }
 }
