--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 
-.env.local
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
+/public/build
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
@@ -19,12 +19,4 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
-
-###> symfony/webpack-encore-bundle ###
-/node_modules/
-/public/build/
-npm-debug.log
-yarn-error.log
-###< symfony/webpack-encore-bundle ###
-
-package-lock.json
+node_modules
