--- a/composer.json
+++ b/composer.json
@@ -89,7 +89,7 @@
             "@auto-scripts"
         ],
         "compile": [
-            "php bin/console doctrine:migration:migrate"
+            "php bin/console doctrine:migrations:migrate"
         ]
     },
     "conflict": {
